[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/beholden/Beholden-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/logo.png" type="Texture" id=2]
[ext_resource path="res://assets/texture/external/noraneko_background_pack_1/Sitting_Room_Dark.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/buttons/itch.io_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/buttons/github_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/buttons/discord_icon.png" type="Texture" id=6]
[ext_resource path="res://system/ui/main_menu/main_menu.gd" type="Script" id=7]
[ext_resource path="res://system/scenes/scene1.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.294118, 0.305882, 0.32549, 1 )

[sub_resource type="Theme" id=4]
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = null
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
script = ExtResource( 7 )
starting_game_scene = ExtResource( 8 )

[node name="Background" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BGColor" type="ColorRect" parent="Background"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0.0313726, 0.0588235, 0.101961, 1 )

[node name="BGTexture" type="TextureRect" parent="Background"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )

[node name="Logo" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -800.0
margin_top = 58.0
margin_right = 800.0
margin_bottom = 508.0
custom_styles/panel = SubResource( 5 )

[node name="LogoBGColor" type="ColorRect" parent="Logo"]
margin_right = 1600.0
margin_bottom = 450.0
color = Color( 0, 0, 0, 0.537255 )

[node name="LogoTexture" type="TextureRect" parent="Logo"]
margin_right = 1600.0
margin_bottom = 450.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.033
anchor_top = 0.483
anchor_right = 0.033
anchor_bottom = 0.483
margin_left = -0.360001
margin_top = 9.35999
margin_right = 418.64
margin_bottom = 484.36
custom_constants/separation = 25
alignment = 2

[node name="ContinueButton" type="Button" parent="ButtonContainer"]
visible = false
margin_right = 500.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="StartButton" type="Button" parent="ButtonContainer"]
margin_top = 100.0
margin_right = 419.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="LoadButton" type="Button" parent="ButtonContainer"]
margin_top = 200.0
margin_right = 419.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Load"

[node name="SettingsButton" type="Button" parent="ButtonContainer"]
margin_top = 300.0
margin_right = 419.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
margin_top = 400.0
margin_right = 419.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="IconContainer" type="HBoxContainer" parent="."]
anchor_left = 0.949
anchor_top = 0.937
anchor_right = 0.949
anchor_bottom = 0.937
margin_left = -482.08
margin_top = -123.96
margin_right = 3.91992
margin_bottom = 4.03998
custom_constants/separation = 25
alignment = 2

[node name="DiscordIconButton" type="PanelContainer" parent="IconContainer"]
margin_left = 52.0
margin_right = 180.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_styles/panel = SubResource( 6 )

[node name="IconContainer" type="CenterContainer" parent="IconContainer/DiscordIconButton"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 124.0

[node name="Icon" type="TextureRect" parent="IconContainer/DiscordIconButton/IconContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 108.0
margin_bottom = 108.0
rect_min_size = Vector2( 96, 96 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="DiscordButton" type="Button" parent="IconContainer/DiscordIconButton"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 124.0
flat = true

[node name="GithubIconButton" type="PanelContainer" parent="IconContainer"]
margin_left = 205.0
margin_right = 333.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_styles/panel = SubResource( 6 )

[node name="IconContainer" type="CenterContainer" parent="IconContainer/GithubIconButton"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 124.0

[node name="Icon" type="TextureRect" parent="IconContainer/GithubIconButton/IconContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 108.0
margin_bottom = 108.0
rect_min_size = Vector2( 96, 96 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="GithubButton" type="Button" parent="IconContainer/GithubIconButton"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 124.0
flat = true

[node name="ItchIconButton" type="PanelContainer" parent="IconContainer"]
margin_left = 358.0
margin_right = 486.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_styles/panel = SubResource( 6 )

[node name="IconContainer" type="CenterContainer" parent="IconContainer/ItchIconButton"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 124.0

[node name="Icon" type="TextureRect" parent="IconContainer/ItchIconButton/IconContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 108.0
margin_bottom = 108.0
rect_min_size = Vector2( 96, 96 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ItchButton" type="Button" parent="IconContainer/ItchIconButton"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 124.0
flat = true

[connection signal="pressed" from="ButtonContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ButtonContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="ButtonContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
